--- a/walmart/pom.xml
+++ b/walmart/pom.xml
@@ -9,18 +9,21 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>slickdeals</artifactId>
+    <artifactId>walmart</artifactId>
+
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
 
     <dependencies>
+
         <dependency>
             <groupId>com.peoplentech</groupId>
             <artifactId>generic</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
     </dependencies>
 
     <build>
@@ -43,7 +46,7 @@
                         <testng.dtd.http>true</testng.dtd.http>
                     </systemPropertyVariables>
                     <suiteXmlFiles>
-                        <suiteXmlFiles>src/test/resources/SlickdealsRunner.xml</suiteXmlFiles>
+                        <suiteXmlFiles>src/test/resources/WalmartRunner.xml</suiteXmlFiles>
                     </suiteXmlFiles>
                 </configuration>
             </plugin>
