--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <modules>
+        <module>walmart</module>
         <module>generic</module>
         <module>macys</module>
         <module>com.weddingwire</module>
